# codesentry-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
AgentMemory/: memory.md
code_docs/phase1_docs/: 00-index.md  01-overview.md  02-architecture.md  03-graph-module.md  04-language-adapters.md  05-retrieval-module.md  06-agent-module.md  07-review-module.md  08-cli-and-config.md  09-testing-and-running.md  10-extending-the-system.md
codesentry/: __init__.py  cli.py  config.py
codesentry/agent/: __init__.py  llm.py  loop.py  prompts.py  schemas.py  tools.py
codesentry/graph/: __init__.py  builder.py  schema.py  store.py
codesentry/languages/: __init__.py  base.py  go.py  java.py  javascript.py  python.py  typescript.py
codesentry/retrieval/: __init__.py  snippets.py  subgraph.py
codesentry/review/: __init__.py  diff.py  reviewer.py
docs/: PHASE_1_SPEC.md
tests/: test_agent.py  test_builder.py  test_graph.py  test_languages_base.py  test_languages_go.py  test_languages_java.py  test_languages_javascript.py  test_languages_python.py  test_languages_typescript.py  test_retrieval.py  test_review.py  test_smoke.py  test_tools.py
tests/fixtures/sample_go/: models.go  repository.go  service.go  utils.go
tests/fixtures/sample_java/: AdminUser.java  Named.java  User.java  UserRepository.java  UserService.java  Utils.java
tests/fixtures/sample_js/: models.js  repository.js  service.js  utils.js
tests/fixtures/sample_mixed/: client.ts  server.py
tests/fixtures/sample_python/: models.py  repository.py  service.py  (+1 more)
(+5 files in other folders)
