[project]
name = "codesentry"
version = "0.1.0"
description = "Language-agnostic code-understanding assistant that builds a graph model of a repository and uses an LLM agent to answer questions and review code with real repo grounding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "networkx>=3.2",
    "openai>=1.50",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "pathspec>=0.12",
    "unidiff>=0.7",
    "python-dotenv>=1.0",
]

[project.scripts]
codesentry = "codesentry.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codesentry"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["codesentry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
